RESOLVED FIXED297828
[align-content] out-of-flow box with no sibling ignores align-content
https://bugs.webkit.org/show_bug.cgi?id=297828
Summary [align-content] out-of-flow box with no sibling ignores align-content
alan
Reported 2025-08-23 12:09:57 PDT
ssia
Attachments
[fast-cq]Patch (7.35 KB, patch)
2025-08-23 12:26 PDT, alan
no flags
alan
Comment 1 2025-08-23 12:26:08 PDT
Created attachment 476499 [details] [fast-cq]Patch
EWS
Comment 2 2025-08-25 05:15:21 PDT
Committed 299107@main (54da8cdbc53d): <https://commits.webkit.org/299107@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 476499 [details].
Radar WebKit Bug Importer
Comment 3 2025-08-25 05:16:14 PDT
Tim Nguyen (:ntim)
Comment 4 2026-02-27 13:30:29 PST
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/58121
Note You need to log in before you can comment on or make changes to this bug.